# chris

./: README.md
Waste_Steel_Supersize_M2_Source(1116)/Waste_Steel_Supersize_M2_Source/: 1.props  CMakeLists.txt  PropertySheetPCL.props  kMeans.cpp  main.cpp  thickness_cal.cpp  thickness_cal.h
scrap 1/Waste_Steel_Calculation_Merge_Supersize_Source/: fakeboundary.cpp  geometry.cpp  kMeans.cpp  main.cpp  supersize_cal.cpp  supersize_cal.h  thickness_cal.cpp  thickness_cal.h
scrap 2/Waste_Steel_Supersize_M2_Source/: 1.props  PropertySheetPCL.props  main.cpp  thickness_cal.cpp  thickness_cal.h
法2/: PCL 1.12.0 Debug.props  PCL 1.12.0 Release.props  kMeans.cpp  main.cpp  thickness_cal.cpp  thickness_cal.h  法2.vcxproj  法2.vcxproj.filters
法2/x64/Debug/: 法2.exe.recipe
法2/x64/Debug/法2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  法2.lastbuildstate
法2/x64/Release/: 法2.exe.recipe
法2/x64/Release/法2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  法2.lastbuildstate
